add normal scoped beans and producers